Bug 120213 - Problems with opening excel files
Summary: Problems with opening excel files
Status: RESOLVED FIXED
Alias: None
Product: calligrasheets
Classification: Applications
Component: filters (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ariya Hidayat
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-01-16 00:08 UTC by Hasso Tepper
Modified: 2006-04-19 22:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Book1.xls (5.00 KB, application/octet-stream)
2006-01-16 00:08 UTC, Hasso Tepper
Details
Book2.xls (12.00 KB, application/octet-stream)
2006-01-16 00:09 UTC, Hasso Tepper
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hasso Tepper 2006-01-16 00:08:07 UTC
Version:           1.4 post (using KDE 3.5.0, compiled sources)
Compiler:          Target: i486-linux-gnu
OS:                Linux (i686) release 2.6.13.2-rt14

Two test *.xls files attached - Book1.xls created with Gnumeric and Book2.xls created with Pocket Excel.

1) Input line is always empty if I select any of cells with content (A1 and A2) in these files.
2) Absolute position of content in cells remains same if I resize the first column in these tables. Ie. it should be left aligned, but it isn't any more if I make column A bigger.
3) A2 in the Book2.xls is empty. No problem in OOo Calc.
Comment 1 Hasso Tepper 2006-01-16 00:08:55 UTC
Created attachment 14265 [details]
Book1.xls
Comment 2 Hasso Tepper 2006-01-16 00:09:29 UTC
Created attachment 14266 [details]
Book2.xls
Comment 3 Ain Vagula 2006-01-16 09:37:45 UTC
The main problem is, why I sent these files to Hasso, that kspread does not convert values in formulas to correct locale format.
In A2 are in both files formulas =A1*0.18
When I use locale with comma-decimals, formula should be visually converted to =A1*0,18. Conversion works with single values in cell, but not with values as formula components (and formula gives 'parse' error).
Comment 4 Ariya Hidayat 2006-04-19 22:17:06 UTC
SVN commit 531678 by ariya:

UString changes:
- remove stuff we never need
- s/from/number to match QString
- remove all @ref
- microoptimize int-to-string

some const references
Handle formula record in Pocket Excel files

BUG: 120213



 M  +2 -2      cell.cpp  
 M  +19 -13    excel.cpp  
 M  +1 -0      excel.h  
 M  +6 -6      format.cpp  
 M  +1 -1      format.h  
 M  +118 -363  ustring.cpp  
 M  +25 -82    ustring.h  
 M  +19 -4     workbook.cpp  
 M  +7 -0      workbook.h