UString changes: - remove stuff we never need - s/from/number to match QString - remove all @ref - microoptimize int-to-string

some const references
Handle formula record in Pocket Excel files

BUG: 120213


svn path=/branches/koffice/1.5/koffice/; revision=531678